src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.overflow-y-overlay {
    overflow-y: overlay;
}
.break-words {
    overflow-wrap: break-word !important;
    word-break: break-word !important;
}

/********/
.rbc-calendar > div {
    border-radius: 0.5rem !important;
}

.rbc-event {
    color: #1F2937 !important;
    padding: 0.1rem 0.5rem 0.1rem 10px !important;
    background: none !important;
    position: relative;
}

.rbc-event:first-child::before {
    display: inline-block;
    content: "";
    width: 3px;
    height: 20px;
    background-color: inherit;
    position: absolute;
    left: 2px;
    border-color: inherit;
    border-radius: 0.25rem;
    border-width: 2px;
}

.side-calendar {
    position: sticky;
    top: 1.25rem;
    border: none !important;
}

abbr[title] {
    text-decoration: none;
}


/********/

.event-scroller:before {
    content: '';
    top: 3rem;
    left: 0;
    height: 40px;
    right: 0;
    background: linear-gradient(to bottom, rgba(251, 251, 251, 1) 0%, rgba(251, 251, 251, 0) 100%);
    position: fixed;
}
.event-scroller:after {
    content: '';
    bottom: 0;
    left: 0;
    height: 80px;
    right: 0;
    background: linear-gradient(to top, rgba(251, 251, 251, 1) 10%, rgba(251, 251, 251, 0) 100%);
    position: fixed;
}

/********/

.ant-modal-content, .ant-modal-header{
    border-radius: 0.25rem !important;
}
.ant-modal-body {
    padding: 10px 24px 24px !important;
}

.no-padding-modal .ant-modal-body {
    padding: 0 !important;
}

/********/

/* Hide scrollbar for Chrome, Safari and Opera */
.hidden-scroller::-webkit-scrollbar {
    display: none;
}
/* Hide scrollbar for IE, Edge and Firefox */
.hidden-scroller {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

/********/

.rounded-scroller .ant-select-selector {
    border-radius: 9999px !important;
}
/********/

.user-drawer .ant-drawer-content{
    border-top-left-radius: 0.5rem !important;
    border-bottom-left-radius: 0.5rem !important;
}

.user-drawer-mobile .ant-drawer-content {
    border-top-left-radius: 0.5rem !important;
    border-top-right-radius: 0.5rem !important;
}

.ant-upload-select {
    @apply !rounded-xl;
}

/********/

* {
    touch-action: pan-x pan-y
}

